@@ -14,30 +14,97 @@ use Wikibase::Datatype::Value::Time;
 
 # Object.
 my $statement1 = Wikibase::Datatype::MediainfoStatement->new(
-        # instance of (P31) human (Q5)
+        # depicts (P180) beach (Q40080)
         'snak' => Wikibase::Datatype::MediainfoSnak->new(
                 'datavalue' => Wikibase::Datatype::Value::Item->new(
-                        'value' => 'Q5',
+                        'value' => 'Q40080',
                 ),
-                'property' => 'P31',
+                'property' => 'P180',
+        ),
+);
+my $statement2 = Wikibase::Datatype::MediainfoStatement->new(
+        # creator (P170)
+        'snak' => Wikibase::Datatype::MediainfoSnak->new(
+                 'property' => 'P170',
+                 'snaktype' => 'novalue',
         ),
         'property_snaks' => [
-                # of (P642) alien (Q474741)
+                # Wikimedia username (P4174): Lviatour
                 Wikibase::Datatype::MediainfoSnak->new(
-                        'datavalue' => Wikibase::Datatype::Value::Item->new(
-                                'value' => 'Q474741',
-                        ),
-                        'property' => 'P642',
+                         'datavalue' => Wikibase::Datatype::Value::String->new(
+                                 'value' => 'Lviatour',
+                         ),
+                         'property' => 'P4174',
+                ),
+
+                # URL (P2699): https://commons.wikimedia.org/wiki/user:Lviatour
+                Wikibase::Datatype::MediainfoSnak->new(
+                         'datavalue' => Wikibase::Datatype::Value::String->new(
+                                 'value' => 'https://commons.wikimedia.org/wiki/user:Lviatour',
+                         ),
+                         'property' => 'P2699',
+                ),
+
+                # author name string (P2093): Lviatour
+                Wikibase::Datatype::MediainfoSnak->new(
+                         'datavalue' => Wikibase::Datatype::Value::String->new(
+                                 'value' => 'Lviatour',
+                         ),
+                         'property' => 'P2093',
+                ),
+
+                # object has role (P3831): photographer (Q33231)
+                Wikibase::Datatype::MediainfoSnak->new(
+                         'datavalue' => Wikibase::Datatype::Value::Item->new(
+                                 'value' => 'Q33231',
+                         ),
+                         'property' => 'P3831',
                 ),
         ],
 );
-my $statement2 = Wikibase::Datatype::MediainfoStatement->new(
-        # sex or gender (P21) male (Q6581097)
+my $statement3 = Wikibase::Datatype::MediainfoStatement->new(
+        # copyright status (P6216) copyrighted (Q50423863)
         'snak' => Wikibase::Datatype::MediainfoSnak->new(
                 'datavalue' => Wikibase::Datatype::Value::Item->new(
-                        'value' => 'Q6581097',
+                        'value' => 'Q50423863',
                 ),
-                'property' => 'P21',
+                'property' => 'P6216',
+        ),
+);
+my $statement4 = Wikibase::Datatype::MediainfoStatement->new(
+        # copyright license (P275) Creative Commons Attribution-ShareAlike 3.0 Unported (Q14946043)
+        'snak' => Wikibase::Datatype::MediainfoSnak->new(
+                'datavalue' => Wikibase::Datatype::Value::Item->new(
+                        'value' => 'Q14946043',
+                ),
+                'property' => 'P275',
+        ),
+);
+my $statement5 = Wikibase::Datatype::MediainfoStatement->new(
+        # Commons quality assessment (P6731) Wikimedia Commons featured picture (Q63348049)
+        'snak' => Wikibase::Datatype::MediainfoSnak->new(
+                'datavalue' => Wikibase::Datatype::Value::Item->new(
+                        'value' => 'Q63348049',
+                ),
+                'property' => 'P6731',
+        ),
+);
+my $statement6 = Wikibase::Datatype::MediainfoStatement->new(
+        # inception (P571) 16. 7. 2011
+        'snak' => Wikibase::Datatype::MediainfoSnak->new(
+                'datavalue' => Wikibase::Datatype::Value::Time->new(
+                        'value' => '+2011-07-16T00:00:00Z',
+                ),
+                'property' => 'P571',
+        ),
+);
+my $statement7 = Wikibase::Datatype::MediainfoStatement->new(
+        # source of file (P7482) original creation by uploader (Q66458942)
+        'snak' => Wikibase::Datatype::MediainfoSnak->new(
+                'datavalue' => Wikibase::Datatype::Value::Item->new(
+                        'value' => 'Q66458942',
+                ),
+                'property' => 'P7482',
         ),
 );
 
@@ -56,6 +123,11 @@ my $obj = Wikibase::Datatype::Mediainfo->new(
         'statements' => [
                 $statement1,
                 $statement2,
+                $statement3,
+                $statement4,
+                $statement5,
+                $statement6,
+                $statement7,
         ],
         'title' => 'File:Lanzarote 1 Luc Viatour.jpg',
 );
@@ -72,8 +144,14 @@ foreach my $label (sort { $a->language cmp $b->language } @{$obj->labels}) {
 }
 print "Statements:\n";
 foreach my $statement (@{$obj->statements}) {
-        print "\tStatement:\n";
-        print "\t\t".$statement->snak->property.' -> '.$statement->snak->datavalue->value."\n";
+        print "\t".$statement->snak->property.' -> ';
+        if ($statement->snak->snaktype eq 'value') {
+                print $statement->snak->datavalue->value."\n";
+        } elsif ($statement->snak->snaktype eq 'novalue') {
+                print "-\n";
+        } elsif ($statement->snak->snaktype eq 'somevalue') {
+                print "?\n";
+        }
         if (@{$statement->property_snaks}) {
                 print "\t\tQualifers:\n";
                 foreach my $property_snak (@{$statement->property_snaks}) {
@@ -92,9 +170,15 @@ foreach my $statement (@{$obj->statements}) {
 # Labels:
 #         Pláž Papagayo, ostrov Lanzarote, Kanárské ostrovy, Španělsko (cs)
 # Statements:
-#         Statement:
-#                 P31 -> Q5
+#         P180 -> Q40080
+#         P170 -> -
 #                 Qualifers:
-#                         P642 -> Q474741
-#         Statement:
-#                 P21 -> Q6581097
+#                         P4174 -> Lviatour
+#                         P2699 -> https://commons.wikimedia.org/wiki/user:Lviatour
+#                         P2093 -> Lviatour
+#                         P3831 -> Q33231
+#         P6216 -> Q50423863
+#         P275 -> Q14946043
+#         P6731 -> Q63348049
+#         P571 -> +2011-07-16T00:00:00Z
+#         P7482 -> Q66458942
