@@ -1,4 +1,5 @@
 0.08
+ - Rewrite example in doc for Mediainfo to some real.
  - Rewrite exmaple in doc for MediainfoSnak to some real.
  - Rewrite example in doc for MediainfoStatement to some real.
 
